[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "grok-sdk-template"
version = "0.1.0"
description = "A modular Python SDK template for grok2api deployments"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "requests>=2.31.0",
  "httpx>=0.27.0",
]

[tool.setuptools]
packages = ["grok_sdk", "grok_sdk.resources"]
